<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.video_detail.VideoDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/imageViewVideoThumbnailLarge"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                tools:srcCompat="@drawable/ic_placeholder_video"
                android:contentDescription="@string/video_thumbnail_content_description" />

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/gradient_top_scrim"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"/>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <TextView
                android:id="@+id/textViewVideoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadlineSmall"
                tools:text="Video Title Goes Here and Can Be Quite Long Indeed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textViewViewCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    tools:text="1,234,567 views" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" • "
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/textViewPublishedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    tools:text="3 weeks ago" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/spacing_small"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:srcCompat="@drawable/ic_like"
                    android:alpha="0.7"/>
                <TextView
                    android:id="@+id/textViewLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:textAppearance="?attr/textAppearanceLabelLarge"
                    tools:text="10K" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="@dimen/spacing_medium"
                    app:srcCompat="@drawable/ic_dislike"
                    android:alpha="0.7"/>
                <TextView
                    android:id="@+id/textViewDislikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:textAppearance="?attr/textAppearanceLabelLarge"
                    tools:text="100" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"/>

            <LinearLayout
                android:id="@+id/layoutAuthorInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_small">

                <ImageView
                    android:id="@+id/imageViewAuthorThumbnail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="Author thumbnail"/>

                <TextView
                    android:id="@+id/textViewAuthorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    tools:text="Author Name"/>
                <!-- Sub count can be added here if available e.g. video.subCountText -->
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_medium"/>


            <TextView
                android:id="@+id/textViewVideoDescriptionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:layout_marginTop="@dimen/spacing_medium"/>

            <TextView
                android:id="@+id/textViewVideoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:maxLines="3"
                android:ellipsize="end"
                tools:text="This is a sample video description that can be quite long and will eventually be toggleable to show more or less content. It might contain links and other formatting. This text is here just to see how it wraps and looks within the defined constraints." />
            <TextView
                android:id="@+id/textViewToggleDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_description"
                android:textAppearance="?attr/textAppearanceLabelLarge"
                android:textColor="?attr/colorPrimary"
                android:layout_marginTop="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_small"
                android:background="?attr/selectableItemBackground"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center_vertical">
                <Button
                    android:id="@+id/buttonPlay"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/play_video"
                    app:icon="@drawable/ic_play_arrow" />
                <Button
                    android:id="@+id/buttonDownload"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:text="@string/download_video"
                    app:icon="@drawable/ic_download" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewCommentsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments_label"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:layout_marginTop="@dimen/spacing_large"/>

            <ProgressBar
                android:id="@+id/progressBarComments"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginTop="@dimen/spacing_medium"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_comment"
                tools:itemCount="3"/>

            <TextView
                android:id="@+id/textViewNoComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_comments_available"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:gravity="center"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginTop="@dimen/spacing_medium"
                android:paddingBottom="32dp"/> <!-- Extra padding at the bottom -->


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/layoutErrorVideoDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:visibility="gone"
        tools:visibility="visible" >
        <TextView
            android:id="@+id/textViewErrorVideoDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            tools:text="Error loading video details." />
        <Button
            android:id="@+id/buttonRetryVideoDetail"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/retry"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarVideoDetail"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
